Zmiana koloru witryn/witryny po bokach/info o braku kinnecta

--- a/KinectFittingRoom.csproj
+++ b/KinectFittingRoom.csproj
@@ -122,7 +122,10 @@
     <Resource Include="Images\tshirt.ico" />
   </ItemGroup>
   <ItemGroup>
-    <SplashScreen Include="Images\wirtualna_przym.png" />
+    <Resource Include="Images\curtains.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <SplashScreen Include="Images\wirtual_przym.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
