put NoKinnectGrid in StatusChanged; change name of splash image

--- a/KinectFittingRoom.csproj
+++ b/KinectFittingRoom.csproj
@@ -107,7 +107,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Hat.png" />
@@ -125,7 +127,7 @@
     <Resource Include="Images\curtains.png" />
   </ItemGroup>
   <ItemGroup>
-    <SplashScreen Include="Images\wirtual_przym.png" />
+    <SplashScreen Include="Images\splash_screen_image.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
