--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -9,7 +9,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KinectFittingRoom</RootNamespace>
-    <AssemblyName>KinectMvvm</AssemblyName>
+    <AssemblyName>KinectFittingRoom</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -67,6 +67,7 @@
     <Compile Include="UI\Buttons\KinectButton.cs" />
     <Compile Include="UI\Buttons\TimerButton.cs" />
     <Compile Include="UI\Debug\SkeletonModel.cs" />
+    <Compile Include="ViewModel\ButtonItems\ClothingCategory.cs" />
     <Compile Include="ViewModel\HandTracking.cs" />
     <Compile Include="ViewModel\KinectService.cs" />
     <Compile Include="ViewModel\IKinectService.cs" />
