Skeleton's finally binding
Need to correct the mapping

--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converters\ReducedValueConverter.cs" />
     <Compile Include="UI\Buttons\Events\HandCursorEventArgs.cs" />
     <Compile Include="UI\Buttons\Events\HandCursorManager.cs" />
     <Compile Include="UI\Buttons\Events\KinectInput.cs" />
