--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -62,20 +62,20 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\ReducedValueConverter.cs" />
-    <Compile Include="UI\Buttons\Events\HandCursorEventArgs.cs" />
-    <Compile Include="UI\Buttons\Events\HandCursorManager.cs" />
-    <Compile Include="UI\Buttons\Events\KinectInput.cs" />
-    <Compile Include="UI\Buttons\KinectButton.cs" />
-    <Compile Include="UI\Buttons\TimerButton.cs" />
-    <Compile Include="UI\Debug\SkeletonModel.cs" />
+    <Compile Include="View\Buttons\Events\HandCursorEventArgs.cs" />
+    <Compile Include="View\Buttons\Events\HandCursorManager.cs" />
+    <Compile Include="View\Buttons\Events\KinectInput.cs" />
+    <Compile Include="View\Buttons\KinectButton.cs" />
+    <Compile Include="View\Buttons\TimerButton.cs" />
+    <Compile Include="ViewModel\Debug\SkeletonManager.cs" />
     <Compile Include="ViewModel\ButtonItems\ClothingCategory.cs" />
     <Compile Include="ViewModel\HandTracking.cs" />
     <Compile Include="ViewModel\KinectService.cs" />
     <Compile Include="ViewModel\IKinectService.cs" />
     <Compile Include="ViewModel\KinectViewModel.cs" />
     <Compile Include="ViewModel\KinectViewModelLoader.cs" />
-    <Compile Include="ViewModel\SkeletonHandling.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\Helpers\SizeObserver.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -124,7 +124,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="Resources\Images\Hand.png" />
+    <Resource Include="Resources\Images\Hand.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Images\Hat.png" />
