fixed showing buttons with clothes and chosen clothes/added glasses

--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -155,7 +155,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -194,6 +196,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\curtains.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Models\glasses_black.png" />
+    <Resource Include="Resources\Models\glasses_blue.png" />
+    <Resource Include="Resources\Models\sunglasses_aviator.png" />
+    <Resource Include="Resources\Models\sunglasses_rayban.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
