--- a/KinectFittingRoom/KinectFittingRoom/packages.config
+++ b/KinectFittingRoom/KinectFittingRoom/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
+  <package id="HelixToolkit" version="2014.2.452" targetFramework="net451" />
+  <package id="HelixToolkit.Wpf" version="2014.2.452" targetFramework="net451" />
   <package id="Prism" version="5.0.0" targetFramework="net451" />
   <package id="Prism.Composition" version="5.0.0" targetFramework="net451" />
   <package id="Prism.Interactivity" version="5.0.0" targetFramework="net451" />
