Added top menu/added sounds

--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -96,10 +96,18 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Converters\BitmapToImageSourceConverter.cs" />
+    <Compile Include="Converters\MultiValueConverter.cs" />
     <Compile Include="Converters\ReducedValueConverter.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="ViewModel\ButtonItems\ButtonViewModelBase.cs" />
     <Compile Include="ViewModel\ButtonItems\ClothingButtonViewModel.cs" />
     <Compile Include="ViewModel\ButtonItems\ModelBase.cs" />
+    <Compile Include="ViewModel\ButtonItems\TopMenuButtonViewModel.cs" />
+    <Compile Include="ViewModel\ButtonItems\TopMenuManager.cs" />
     <Compile Include="ViewModel\ClothingItems\ClothingItemBase.cs" />
     <Compile Include="ViewModel\ClothingItems\ClothingManager.cs" />
     <Compile Include="ViewModel\ClothingItems\GlassesItem.cs" />
@@ -138,15 +146,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Resources\Styles\RoundButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -156,7 +163,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
-      <LastGenOutput>Resources1.Designer.cs</LastGenOutput>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="app.config" />
     <None Include="packages.config">
@@ -224,6 +231,45 @@
     <None Include="Resources\Models\sunglasses_rayban.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_arrows.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_camera.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_clearSet.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_doors.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_menWomen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\menu_speaker.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\vertical_arrows.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\vertical_arrows_smaller.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\woman.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu\man.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ButtonClick.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\CameraClick.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
