Implemented woman and man clothes type/fixed menu displaying

--- a/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
+++ b/KinectFittingRoom/KinectFittingRoom/KinectFittingRoom.csproj
@@ -116,6 +116,7 @@
     <Compile Include="View\Buttons\Events\HandCursorEventArgs.cs" />
     <Compile Include="View\Buttons\Events\ButtonsManager.cs" />
     <Compile Include="View\Buttons\Events\KinectInput.cs" />
+    <Compile Include="View\Buttons\Events\ScreenShotEvent.cs" />
     <Compile Include="View\Buttons\KinectButton.cs" />
     <Compile Include="ViewModel\Debug\SkeletonManager.cs" />
     <Compile Include="ViewModel\ButtonItems\ClothingCategoryButtonViewModel.cs" />
@@ -258,12 +259,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Menu\vertical_arrows_smaller.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Menu\woman.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\Menu\man.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\ButtonClick.wav" />
